Boton Login Google, state magment, corriccion formbuilder
Se reformo el signup que estaba mal la presentacion anterior se utilizo formbuilder, se creo boton login de goole, tambien se implmento register el cual lo utilizamos dentro del signUp de que va a postman, hacemos que tambien llame a la funcion de register en firebase, se implmento la parte de statemanagment se añaden Imagenes

--- a/src/app/account-customer/profile/profile.component.html
+++ b/src/app/account-customer/profile/profile.component.html
@@ -4,6 +4,10 @@
 <p> email: {{customer?.email}} </p>
 <p>Phone: {{ customer?.phone }}</p>
 
+
+
+  <input type="submit" (click)="logOut()" class="fadeIn fourth" value="logOut">
+        
 <!-- 
 <table *ngFor="let index of customers">
 <ul>
