--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
     <a href="#">Info de usuario</a>
   </div>
   <div class="right-side">
-    <a href="#">Sign In</a>
+    <button>Sign In</button>
     <a href="#">Sign Up</a>
   </div>
 </div>
