--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -10,18 +10,23 @@
                 id="icon" alt="User Icon" />
         </div>
 
-        <!--(ngModel)]="login" (ngModel)]="password" Login Form 
-    form (ngSubmit)="login(login,password)"-->
+    
         <form >
             <div class="form-group">
-                <input [(ngModel)]="username" type="text" id="username" class="fadeIn second" name="username"
+                <input [(ngModel)]="username"  id="username" class="fadeIn second" name="username"
                     placeholder="username">
             </div>
             <div class="form-group">
-             <input [(ngModel)]="password" type="text" id="password" class="fadeIn third"
+             <input [(ngModel)]="password"  id="password" class="fadeIn third"
                 name="password" placeholder="password">
             </div>
+        
             <input type="submit" (click)="login(username,password)" class="fadeIn fourth" value="Log In">
+
+            <button class="boton-login">
+                <span class="icono-google"></span>
+                <span type="submit" (click)="onClick()" class="texto-boton">Iniciar sesión con Google</span>
+            </button>
         </form>
 
         <!-- Remind Passowrd -->
