--- a/src/app/modules/login/home/home.component.html
+++ b/src/app/modules/login/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="components">
 <app-singin></app-singin>
 <app-singup></app-singup>
+<button  type="submit"> activar toolbar y footer</button>
 </div>
