--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<div class="menu" *ngIf="this.status" >
   <header>
       <div class="divheader">
           <nav class="navbar">
