--- a/src/app/modules/login/singup/singup.component.html
+++ b/src/app/modules/login/singup/singup.component.html
@@ -34,7 +34,7 @@
       <div class="content">
       <div class="row">
         <div class="col-md-3">
-          <button (click)="loginService.onClick()" butt class="btn btn-outline-dark" href="/users/googleauth" role="button" style="text-transform:none" >
+          <button (click)="this.loginService.onClick()" butt class="btn btn-outline-dark" href="/users/googleauth" role="button" style="text-transform:none" >
             <img  width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
             Login with Google
           </button>
@@ -42,7 +42,7 @@
       </div>
       </div>
       <h3>¿Ya tienes una cuenta? </h3>
-      <button type="submit" mat-raised-button color="primary" (click)="(loginService.valorCaseLogin = 1)">Sing In</button>
+      <button type="submit" mat-raised-button color="primary" (click)="(this.loginService.valorCaseLogin = 1)">Sing In</button>
     </form>
   </mat-card-content>
 </mat-card>
