Commit FireBase and Sate Management

--- a/src/app/login/singup/singup.component.scss
+++ b/src/app/login/singup/singup.component.scss
@@ -108,3 +108,123 @@
   font-size: 18px;
   color: #707070;
 }
+
+//**********************GOOGLE*************************
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.form-register {
+  width: 500px;
+  background: #212127;
+  padding: 30px;
+  //margin: auto;
+  //margin-top: 0px;
+  margin-bottom: 180px;
+  font-family: Helvetica;
+  color: white;
+  box-shadow: 7px 13px 37px #000000;
+}
+
+.form-register h4 {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.controls {
+  width: 100%;
+  background: #f8faf8;
+  padding: 10px;
+
+
+  margin-bottom: 16px;
+  border: 3px solid #f8faf8;
+  font-family: Helvetica;
+  font-size: 18px;
+  color: #212121;
+}
+
+.form-register p {
+  height: 30px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+
+//********************BOTTOM****************************
+
+.form-register .boton {
+  width: 100%;
+  background: #fe6047;
+  border: none;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
+}
+
+.form-register .boton:hover{
+  background-color: #5eaefff2;
+}
+
+
+.form-register .link {
+  color: #4f8dcaf2
+}
+
+
+//***************************GOOGLE********************************
+// $google-blue: #4285f4;
+$white: #fff;
+$google-blue: #4285f4;
+$button-active-blue: #1669F2;
+
+.google-btn {
+//width: 184px;
+width: 100%;
+height: 46px;
+background-color: $google-blue;
+border-radius: 0px;
+box-shadow: 0 3px 4px 0 rgba(0,0,0,.25);
+margin-bottom: 10PX;
+
+.google-icon-wrapper {
+  position: absolute;
+  margin-top: 1px;
+  margin-left: 1px;
+  width: 45px;
+  height: 45px;
+  border-radius: 2px;
+  background-color: $white;
+  height: 44PX;
+}
+.google-icon {
+  position: relative;
+  margin-top: 11px;
+  margin-left: 2px;
+  width: 30px;
+  height: 18px;
+}
+.btn-text {
+  float: center;
+  margin: 11px 11px 0 0;
+  padding-top: 9px; //UBICACION DEL TEXTO
+  color: $white;
+  font-size: 16px;
+  //letter-spacing: 0.2px;
+  //font-family: "Roboto";
+  //font-size: 16px;
+}
+&:hover {
+  box-shadow: 0 0 6px $google-blue;
+}
+&:active {
+  background: $button-active-blue;
+}
+}
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
