--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -25,6 +25,15 @@
       </select>
 
     <button class="boton" type="submit"  (click)="true"  >Sign Up</button>
+
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+
+    <div class="google-btn">
+      <div class="google-icon-wrapper">
+        <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+      </div>
+      <p class="btn-text" (click)="pickGoogle()"><b> Sign Up with google</b></p>
+    </div>
    
     <p>Ya estás registrado?</p> <a class= "link" (click)="(globalService.valorCaseLogin = 1)" >Ingresar!</a>
   </form>
