--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -11,17 +11,17 @@
         </div>
 
     
-        <form >
+        <form  [formGroup]="signInForm" (ngSubmit)="login()">
             <div class="form-group">
-                <input [(ngModel)]="username"  id="username" class="fadeIn second" name="username"
-                    placeholder="username">
+                <input formControlName="email"  id="email" class="fadeIn second" name="email"
+                    placeholder="email">
             </div>
             <div class="form-group">
-             <input [(ngModel)]="password"  id="password" class="fadeIn third"
+             <input formControlName="password"  id="password" class="fadeIn third"
                 name="password" placeholder="password">
             </div>
         
-            <input type="submit" (click)="login(username,password)" class="fadeIn fourth" value="Log In">
+            <input type="submit"  class="fadeIn fourth" value="Log In">
 
             <button class="boton-login">
                 <span class="icono-google"></span>
